# messaging-pubsub

./: CMakeLists.txt  README
include/: CppWrapper.h  MapWrap.hh  messaging-client.h  messaging-common.h  messaging-server.h  ss_data.h  vector.h
src/: CMakeLists.txt  CppWrapper.cc  MapWrap.cc  messaging-client.c  messaging-config.cmake.in  messaging-server.c  messaging.pc.in
tests/: CMakeLists.txt  client.c  server.c  test_script.sh
